--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "licensenft",
+  "name": "warranty-nft",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -19,10 +19,5 @@
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.5",
     "vite": "^2.9.9"
-  },
-  "main": "vite.config.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  }
 }
