--- a/smart_contract/package.json
+++ b/smart_contract/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "ethereum-waffle": "^3.4.4",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "truffle": "^5.5.21"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.1",
