--- a/smart_contract/package.json
+++ b/smart_contract/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "bignumber.js": "^9.0.2",
     "ethereum-waffle": "^3.4.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
