--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
     "ethers": "^5.6.9",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "web3": "^1.7.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
