--- a/client/package.json
+++ b/client/package.json
@@ -8,10 +8,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "browserify-zlib": "^0.2.0",
     "ethers": "^5.6.9",
+    "events": "^3.3.0",
+    "process": "^0.11.10",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1",
+    "requirejs": "^2.3.6",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.4",
     "web3": "^1.7.4"
   },
   "devDependencies": {
