--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "process": "^0.11.10",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "requirejs": "^2.3.6",
